[package]
name = "async-playground"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.8", features = ["thread-pool"] }
rand = "0.8.0"
async-std = { version = "1.8.0" }
rayon = "1.5.0"
tokio = { version = "0.3", features = ["sync", "time", "rt", "macros", "rt-multi-thread", "io-std"] }
async-tungstenite = "0.10.0"
tokio-tungstenite = "0.12.0"


[[bin]]
name = "server"

[[bin]]
name="client"
